<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MatchStatsTitleTextView"
                android:text="@string/result"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/opponentLeftScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/colourPrimaryDark"
                    android:textSize="@dimen/game_over_text_size"
                    android:text="@string/line"/>

                <TextView
                    android:id="@+id/opponentRightScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rightOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MatchStatsTitleTextView"
                android:text="@string/shotOnTarget"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/opponentLeftShotOnTarget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/colourPrimaryDark"
                    android:textSize="@dimen/game_over_text_size"
                    android:text="@string/line"/>

                <TextView
                    android:id="@+id/opponentRightShotOnTarget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rightOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MatchStatsTitleTextView"
                android:text="@string/shot"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/opponentLeftShot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/colourPrimaryDark"
                    android:textSize="@dimen/game_over_text_size"
                    android:text="@string/line"/>

                <TextView
                    android:id="@+id/opponentRightShot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rightOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MatchStatsTitleTextView"
                android:text="@string/possession"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/opponentLeftPossession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="@color/colourPrimaryDark"
                    android:textSize="@dimen/game_over_text_size"
                    android:text="@string/percentage"/>

                <TextView
                    android:id="@+id/opponentRightPossession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rightOpponent"
                    android:textSize="@dimen/game_over_text_size"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>