<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:weightSum="10">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="2"
            android:background="@color/leftOpponent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/scoringOpportunityLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:gravity="center"
                        android:textColor="@color/textColour"
                        android:textSize="@dimen/tutorial_text_size_small"
                        android:text="@string/opportunityBoard"/>

                    <TextView
                        android:id="@+id/scoreLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textColor="@color/textColour"
                        android:textSize="@dimen/tutorial_text_size_big"
                        android:text="@string/scoreBoardLeft"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="@dimen/divider_thickness"
                android:layout_height="match_parent"
                android:background="@color/dividerColour"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/rightOpponent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/scoringOpportunityRight"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:gravity="center"
                        android:textColor="@color/textColour"
                        android:textSize="@dimen/tutorial_text_size_small"
                        android:text="@string/opportunityBoard"/>

                    <TextView
                        android:id="@+id/scoreRight"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textColor="@color/textColour"
                        android:textSize="@dimen/tutorial_text_size_big"
                        android:text="@string/scoreBoardRight"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="@color/dividerColour"/>

        <LinearLayout
            android:id="@+id/playArea"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/colourPrimary">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:weightSum="3">

                <TextView
                    android:id="@+id/speaker"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/tutorial_text_size_small"
                    android:textColor="@color/textColour"
                    android:text="@string/playArea"/>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="@dimen/tutorial_text_size_big"
                    android:textColor="@color/textColour"
                    android:text="@string/score1000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="gone"/>

</RelativeLayout>