<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:gravity="center"
            android:background="@color/leftOpponent">

            <TextView
                android:id="@+id/scoringOpportunityLeft"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/textColour"
                android:textSize="@dimen/opportunity_text_size"
                android:text="@string/zeroOutOfZero"/>

            <TextView
                android:id="@+id/scoreLeft"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/textColour"
                android:textSize="@dimen/scrore_text_size"
                android:text="@string/zero"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/divider_thickness"
            android:layout_height="match_parent"
            android:background="@color/dividerColour"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:gravity="center"
            android:background="@color/rightOpponent">

            <TextView
                android:id="@+id/scoringOpportunityRight"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/textColour"
                android:textSize="@dimen/opportunity_text_size"
                android:text="@string/zeroOutOfZero"/>

            <TextView
                android:id="@+id/scoreRight"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/textColour"
                android:textSize="@dimen/scrore_text_size"
                android:text="@string/zero"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:background="@color/dividerColour"/>

    <LinearLayout
        android:id="@+id/playArea"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/leftOpponent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/speaker"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/speaker_text_size"
                android:textColor="@color/textColour"
                android:text="@string/noComment"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/timer_text_size"
                android:textColor="@color/textColour"
                android:text="@string/zero" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>